--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,20 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+    height: 100vh;
+    background: linear-gradient(120deg, red, purple, blue);
+    background-size: cover;
+    color: white;
 }
 
 /* Navigation Bar Styles */
-nav {
-    background-color: #333;
-    overflow: hidden;
-}
 
 nav ul {
     list-style-type: none;
-    background-color: #333;
-    text-align: center;
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 nav ul li {
@@ -29,18 +26,20 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
-    padding: 20px;
+    padding: 14px 20px;
     display: inline-block;
 }
 
 nav ul li a:hover {
-    background-color: #555;
+    background-color: #ddd;
+    color: black;
 }
 .about-container {
     text-align: center;
     padding: 50px;
     max-width: 800px;
     margin: auto;
+    color: white;
 }
 
 .about h1 {
