--- a/styles.scss
+++ b/styles.scss
@@ -170,16 +170,20 @@ nav ul li a:hover {
 }
 
 .about-container {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    text-align: center;
+    height: 100vh; /* Full screen height */
     padding: 50px;
     max-width: 800px;
-    margin: auto;
     color: white;
+    margin: auto;
+    position: relative;
     z-index: 10;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.7); /* Slightly transparent */
+    border-radius: 10px;
     
 }
 
