--- a/styles.css
+++ b/styles.css
@@ -8,116 +8,144 @@ body, html {
   overflow-y: scroll;
 }
 
-:root {
-  --color-bg1: rgb(148, 0, 162);
-  --color-bg2: rgb(0, 17, 82);
-  --color-interactive: rbg(221, 74, 255);
-  --color1: 18, 113, 255;
-  --color2: 221, 74, 255;
-  --color3: 100, 228, 255;
-  --color4: 50, 200, 80;
-  --color5: 180, 180, 50;
-  --color6: 200, 150, 80;
-  --circle-size: 80%;
-  --blending: hard-light;
+body {
+  justify-content: center;
+  box-sizing: border-box;
 }
 
-.gradient-bg {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.g1, .g2, .g3, .g4, .g5 {
+.absolute {
   position: absolute;
-  border-radius: 50%;
-  mix-blend-mode: var(--blending);
-  opacity: 0.8;
+  top: 50px !important;
+  inset: 0;
+  justify-content: center;
+  display: inline-flex;
+  flex-direction: row;
 }
 
-.g1 {
-  background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0%, rgba(var(--color1), 0) 50%);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: calc(50% - var(--circle-size) / 2);
-  left: 10%;
-  transform-origin: center;
-  animation: moveVertical 30s ease infinite;
-  opacity: 1;
+.justify-center {
+  justify-content: center;
 }
 
-.g2 {
-  background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0%, rgba(var(--color2), 0) 50%);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: 20%;
-  left: 50%;
-  transform-origin: calc(50% - 400px);
-  animation: moveInCircle 20s reverse infinite;
-  opacity: 1;
+.bg-shape1 {
+  width: 400px;
+  height: 400px;
+  border-radius: 9999px;
+  position: relative;
+  animation: one 10s infinite;
 }
 
-.g3 {
-  background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0%, rgba(var(--color3), 0) 50%);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: 60%;
-  left: 30%;
-  transform-origin: calc(50% + 400px);
-  animation: moveInCircle 40s linear infinite;
-  opacity: 1;
+.bg-shape2 {
+  width: 300px;
+  height: 300px;
+  border-radius: 9999px;
+  position: relative;
+  animation: two 10s infinite;
 }
 
-.g4 {
-  background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0%, rgba(var(--color4), 0) 50%);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: 50%;
-  left: 10%;
-  transform-origin: calc(50% + 400px);
-  animation: moveHorizontal 40s ease infinite;
+.bg-shape3 {
+  width: 300px;
+  height: 300px;
+  border-radius: 9999px;
+  position: relative;
+  animation: three 10s infinite;
 }
 
-.g5 {
-  background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0%, rgba(var(--color5), 0) 50%);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: 0%;
-  left: -30%;
-  transform-origin: calc(50% - 800px) calc(50% + 200px);
-  animation: moveInCircle 20s ease infinite;
-  opacity: 1;
+@keyframes one {
+  0% {
+    left: 0px;
+    top: 0px;
+  }
+  35% {
+    left: -300px;
+    top: 70px;
+  }
+  55% {
+    left: 20px;
+    top: 150px;
+  }
+  85% {
+    left: 50px;
+    top: 100px;
+  }
+  100% {
+    left: 0px;
+    top: 0px;
+  }
+}
+@keyframes two {
+  0% {
+    left: 0px;
+    top: 0px;
+  }
+  15% {
+    left: 50px;
+    top: 10px;
+  }
+  40% {
+    left: 100px;
+    top: 50px;
+  }
+  65% {
+    left: 50px;
+    top: 100px;
+  }
+  100% {
+    left: 0px;
+    top: 0px;
+  }
+}
+@keyframes three {
+  0% {
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    left: 300px;
+    top: 10px;
+  }
+  50% {
+    left: 300px;
+    top: 50px;
+  }
+  75% {
+    left: 100px;
+    top: 300px;
+  }
+  85% {
+    left: 50px;
+    top: 100px;
+  }
+  100% {
+    left: 0px;
+    top: 0px;
+  }
+}
+.opacity-50 {
+  opacity: 0.5;
 }
 
-.g6 {
-  position: absolute;
-  background: radial-gradient(circle at center, rgba(177, 177, 36, 0.8) 0%, rgba(255, 255, 0, 0) 50%); /* Yellow orb */
-  width: var(--circle-size);
-  height: var(--circle-size);
-  top: -50px;
-  right: -350px;
-  opacity: 1;
-  z-index: 10;
-  animation: moveInCircle 20s ease infinite;
-  animation: moveVertical 30s ease infinite;
+.bg-blur {
+  filter: blur(90px);
 }
 
-.interactive {
-  position: absolute;
-  background: radial-gradient(circle at center, rgba(var(--color6), 0.8) 0%, rgba(var(--color6), 0) 50%);
-  mix-blend-mode: var(--blending);
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  opacity: 1;
-  z-index: 1000;
-  pointer-events: none;
-  transform: translate(0, 0);
+.bg-primary {
+  background-color: rgb(30, 0, 255);
+}
+
+.bg-teal {
+  background-color: rgb(255, 72, 173);
+}
+
+.bg-purple {
+  background-color: rgb(140, 0, 215);
+}
+
+h1 {
+  margin: 0 auto;
+  top: 200px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 90px;
 }
 
 /* Navigation Bar Styles */
@@ -141,20 +169,20 @@ nav ul {
 }
 
 nav ul li a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 12px 24px;
   border-radius: 50px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: transparent;
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  font-size: 1.2rem;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  border: transparent;
+  transition: font-size 1.2s ease, background-color 0.2s ease, color 0.3s ease;
 }
 
 nav ul li a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgba(255, 193, 193, 0.8); /* Change background on hover */
+  color: white; /* Change text color on hover */
+  transition: background-color 0.8s ease, color 0.5s ease;
 }
 
 /* Text Styling */
@@ -212,6 +240,10 @@ nav ul li a:hover {
 
 /* Social Media Links */
 footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   text-align: center;
   margin-top: 50px;
   z-index: 10;
@@ -226,19 +258,16 @@ footer {
 .social-links li {
   display: inline;
   margin: 0 10px;
-  z-index: 10;
 }
 
 .social-links li a {
   text-decoration: none;
   color: #333;
   font-size: 1.5rem;
-  z-index: 10;
 }
 
 .social-links li a:hover {
   color: #0073e6;
-  z-index: 10;
 }
 
 /* Header Styling */
@@ -254,54 +283,6 @@ p {
   position: relative;
   text-align: center;
   padding: 10px;
-}
-
-@keyframes moveInCircle {
-  0% {
-    transform: rotate(360deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(0);
-  }
-}
-@keyframes moveVertical {
-  0% {
-    transform: translateY(-50%);
-  }
-  50% {
-    transform: translateY(50%);
-  }
-  100% {
-    transform: translateY(-50%);
-  }
-}
-@keyframes moveHorizontal {
-  0% {
-    transform: translateX(-50%) translateY(-10%);
-  }
-  50% {
-    transform: translateX(50%) translateY(10%);
-  }
-  100% {
-    transform: translateX(-50%) translateY(-10%);
-  }
-}
-@keyframes moveDiagonal {
-  0% {
-    top: 0; /* Start at top right */
-    right: 0;
-  }
-  50% {
-    top: 50vh;
-    right: 50vw;
-  }
-  100% {
-    top: 0vh; /* Move to bottom */
-    right: 0vw; /* Move to left */
-  }
 }
 
 /*# sourceMappingURL=styles.css.map */
