--- a/styles.scss
+++ b/styles.scss
@@ -121,6 +121,7 @@ nav {
     padding: 20px 0;
     z-index: 10;
     transition: top 0.3s;
+    backdrop-filter: blur(20px);
 }
 nav ul {
   list-style: none;
